--- a/eventdet6.html
+++ b/eventdet6.html
@@ -38,7 +38,7 @@
                 <br>
                 <h3 class="event-details-subtitle">Event Description</h3>
                 <p class="event-details-description">
-                    howcase your research, ideas, and innovations in our Paper Presentation event! Present your insights on emerging technologies, industry trends, and groundbreaking concepts to a panel of experts. Impress with your knowledge, clarity, and presentation skills
+                    Showcase your research, ideas, and innovations in our Paper Presentation event! Present your insights on emerging technologies, industry trends, and groundbreaking concepts to a panel of experts. Impress with your knowledge, clarity, and presentation skills
                 </p>
                 <div class="event-details-info">
                     <p>Fee: <span class="event-details-value">Free Entry</span></p><br>
