--- a/forms/surprise_event.html
+++ b/forms/surprise_event.html
@@ -129,8 +129,14 @@
             </select>
 
             <label for="participantsCount">Number of Participants:</label>
-            <input type="number" id="participantsCount" name="participantsCount" required>
-
+            <select id="year" name="year" required>
+              <option value="" disabled selected>Select Number of Participants</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              
+            </select>
             <button type="submit">Register</button>
           </form>
         </div>
