--- a/teams.html
+++ b/teams.html
@@ -53,7 +53,7 @@
 
             <div class="team-member-card">
                 <div class="team-member-image">
-                    <img src="WhatsApp Image 2025-02-14 at 09.06.47_f3e40b34.jpg"
+                    <img src="./res/thanush_photo.jpg"
                         alt="Thanush S">
                 </div>
                 <h3 class="team-member-name">Thanush S</h3>
@@ -66,7 +66,7 @@
                         alt="Divakar P">
                 </div>
                 <h3 class="team-member-name">Divakar P</h3>
-                <a href="#" class="connect-button"><i class="fas fa-link"></i> Connect</a>
+                <a href="https://www.linkedin.com/in/divakar-p-96584025b/" class="connect-button"><i class="fas fa-link"></i> Connect</a>
             </div>
         </div>
     </section>
